turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:48: error: ')' expected but character literal found.
  rule=Array(((0,1)Array((0,1)Array(1,'R',0)(0,'N',0),(1,'L',1)(0'N',1))))
                                                                 ^Turmite:64: error: ')' expected but '}' found.
} 
^